# vlam-drive

./: .env.example  .gitignore  LICENSE  README.md  carla-test.ipynb  carla-test.py  gradio-test.py  model_outputs  pyproject.toml  run_vlm_drive.py
carla/objects/: place_A.fbx  place_B.fbx  place_C.fbx  sign_A.fbx  sign_BC.fbx
vlm_drive/: __init__.py
vlm_drive/config/: mine_waypoints.yaml  settings.py
vlm_drive/integrations/: __init__.py  google_api.py  vllm_api.py
vlm_drive/model/: __init__.py  templates.py  utils.py  vlam.py
vlm_drive/simulation/: __init__.py  carla_sim.py  vehicle.py  waypoint_handler.py
vlm_drive/simulation/agents/navigation/: basic_agent.py  behavior_agent.py  constant_velocity_agent.py  controller.py  global_route_planner.py  local_planner.py
vlm_drive/vlam/: templates.py  vlam.py
